# sqlite-utils-fast-fks

./: pyproject.toml  sqlite_utils_fast_fks.py
tests/: test_fast_fks.py  test_fast_fks_cli.py
